all part of login and sign  finished

--- a/frontend/pages/sign.html
+++ b/frontend/pages/sign.html
@@ -27,10 +27,13 @@
         </label>
         <input type="file" id="customFile" class="custom-file-input" hidden />
 
+        <p id="error"></p>
+        <p id="succes"></p>
+
         <button onclick="sign()">Sign Up</button>
         <div class="signLinks">
           <a href="#">Forgot password?</a>
-          <a href="/index.html">Log in to Twitter</a>
+          <a href="/index.html">Go to Login page</a>
         </div>
       </div>
     </div>
