--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,7 @@
         <h1>Log in to Twitter</h1>
         <input type="text" placeholder="Username" id="username" />
         <input type="password" placeholder="Password" id="password"/>
+        <p id="error"></p>
         <button onclick="login()">Log In</button>
         <div class="loginLinks">
           <a href="#">Forgot password?</a>
