added nigit mode for all pages

--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <div class="container">
+        <!-- sidebar part-->
       <div class="sidebar">
         <div class="sidebarLinks">
           <img src="/assets/imgs/logo/twitter-logo-4 1.svg" alt="" />
@@ -33,8 +34,13 @@
 
         </div>
       </div>
-      
-      <div class="timeline"></div>
+        <!-- timeline part -->
+      <div class="timeline">
+        <div class="mode">
+            <h2>Home</h2>
+            <h2 class="modeToggle" id="modeToggle" onclick="switchMode()"><i class="fa-solid fa-moon"></i></h2>
+        </div>
+      </div>
       <div class="rightSidebar"></div>
     </div>
   </body>
