--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -27,7 +27,7 @@
           <a href="#"><i class="fa-solid fa-envelope"></i> Message</a>
           <a href="#"><i class="fa-solid fa-bookmark"></i> Bookmarks</a>
           <a href="#"><i class="fa-solid fa-clipboard-list"></i> Lists</a>
-          <a href="#"><i class="fa-solid fa-user"></i> Lists</a>
+          <a href="#"><i class="fa-solid fa-user"></i> Profile</a>
           <a href="#"><i class="fa-solid fa-ellipsis"></i> More</a>
         </div>
         <div class="profile">
