--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -51,7 +51,7 @@
               <img
                 src="../assets/imgs/logo/twitter-logo-4 1.svg"
                 alt="user image" />
-              <input type="text" placeholder="Whats happening?" />
+              <input id="postText" type="text" placeholder="Whats happening?" />
             </div>
             <div class="btnDiv">
               <div class="selectBtn">
@@ -70,7 +70,7 @@
                   <i class="fa-solid fa-chart-bar"></i>
                   <i class="fa-solid fa-business-time"></i>
               </div>
-              <button>Send Post</button>
+              <button onclick="addPost()">Send Post</button>
             </div>
           </div>
         </div>
