--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -49,7 +49,8 @@
           <div class="addPost">
             <div class="inputDiv">
               <img
-                src="../assets/imgs/logo/twitter-logo-4 1.svg"
+                class="inputDivImg"
+                src=""
                 alt="user image" />
               <input id="postText" type="text" placeholder="Whats happening?" />
             </div>
