rasmlar yuklanyapdi post qilish tugadi

--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -74,6 +74,9 @@
               <button onclick="addPost()">Send Post</button>
             </div>
           </div>
+          <div class="userPosts">
+
+          </div>
         </div>
 
         <div class="more">
