--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -24,7 +24,7 @@
           <a href="#" onclick="homePart()"
             ><i class="fa-solid fa-house"></i> Home</a
           >
-          <a href="#"><i class="fa-solid fa-hashtag"></i> Explore</a>
+          <a href="#" onclick="explorePart()"><i class="fa-solid fa-hashtag"></i> Explore</a>
           <a href="#"><i class="fa-solid fa-bell"></i> Notifications</a>
           <a href="#"><i class="fa-solid fa-envelope"></i> Message</a>
           <a href="#"><i class="fa-solid fa-bookmark"></i> Bookmarks</a>
@@ -39,7 +39,7 @@
       <!-- timeline part -->
       <div class="timeline">
         <div class="title">
-          <h2>Home</h2>
+          <h2 class="pageTitle">Home</h2>
           <h2 class="titleIcon">
             <i class="fa-solid fa-wand-magic-sparkles"></i>
           </h2>
@@ -75,6 +75,9 @@
             </div>
           </div>
           <div class="userPosts">
+
+          </div>
+          <div class="allUserPosts">
 
           </div>
         </div>
