--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -119,10 +119,26 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               </div>
             </div>
+            <div class="secMidCard">
+              <img src="" alt="rasm" />
+              <div class="secMidText">
+                <h3>Username</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+            </div>
+            <div class="secMidCard">
+              <img src="" alt="rasm" />
+              <div class="secMidText">
+                <h3>Username</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+            </div>
           </div>
           <!-- input for send comments -->
           <div class="secBottom">
-            
+            <img src="" alt="rasm">
+            <input type="text" placeholder="Comment...">
+            <button>Send</button>
           </div>
         </div>
       </div>
