--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -136,7 +136,7 @@
           </div>
           <!-- input for send comments -->
           <div class="secBottom">
-            <img src="" alt="rasm">
+            <img class="senderImg" src="" alt="rasm">
             <input type="text" placeholder="Comment...">
             <button>Send</button>
           </div>
