commments added this succes

--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -130,8 +130,8 @@
           <!-- input for send comments -->
           <div class="secBottom">
             <img class="senderImg" src="" alt="rasm">
-            <input type="text" placeholder="Comment...">
-            <button>Send</button>
+            <input class="senderInput" type="text" placeholder="Comment...">
+            <button onclick="addComment()">Send</button>
           </div>
         </div>
       </div>
