--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -17,6 +17,11 @@
   </head>
   <body>
     <div class="container">
+
+
+
+
+      
       <!-- sidebar part-->
       <div class="sidebar">
         <div class="sidebarLinks">
@@ -29,7 +34,7 @@
           >
           <a href="#"><i class="fa-solid fa-bell"></i> Notifications</a>
           <a href="#"><i class="fa-solid fa-envelope"></i> Message</a>
-          <a href="#"><i class="fa-solid fa-bookmark"></i> Bookmarks</a>
+          <a href="#" onclick="bookmarksPart()"><i class="fa-solid fa-bookmark"></i> Bookmarks</a>
           <a href="#"><i class="fa-solid fa-clipboard-list"></i> Lists</a>
           <a href="#"><i class="fa-solid fa-user"></i> Profile</a>
           <a href="#" onclick="morePart()"
