--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -32,11 +32,11 @@
           <a href="#" onclick="explorePart()"
             ><i class="fa-solid fa-hashtag"></i> Explore</a
           >
-          <a href="#"><i class="fa-solid fa-bell"></i> Notifications</a>
-          <a href="#"><i class="fa-solid fa-envelope"></i> Message</a>
+          <!-- <a href="#"><i class="fa-solid fa-bell"></i> Notifications</a>
+          <a href="#"><i class="fa-solid fa-envelope"></i> Message</a> -->
           <a href="#" onclick="bookmarksPart()"><i class="fa-solid fa-bookmark"></i> Bookmarks</a>
-          <a href="#"><i class="fa-solid fa-clipboard-list"></i> Lists</a>
-          <a href="#"><i class="fa-solid fa-user"></i> Profile</a>
+          <!-- <a href="#"><i class="fa-solid fa-clipboard-list"></i> Lists</a>
+          <a href="#"><i class="fa-solid fa-user"></i> Profile</a> -->
           <a href="#" onclick="morePart()"
             ><i class="fa-solid fa-ellipsis"></i> More</a
           >
