--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -80,6 +80,7 @@
           </div>
           <div class="userPosts"></div>
           <div class="allUserPosts"></div>
+          <div class="userFavPostDiv"></div>
         </div>
 
         <div class="more">
@@ -111,6 +112,9 @@
           <div class="secMid">
             <!-- messages for comments -->
             
+          </div>
+          <div class="userFavPostDiv">
+
           </div>
           <!-- input for send comments -->
           <div class="secBottom">
